# stm32f4-discovery-signal-generator

./: Cargo.toml  README.md  memory.x
.cargo/: config
src/: main.rs
