[package]
name = "stm32f4-discovery-signal-generator"
version = "0.1.0"
authors = ["Matt Mullins <mmullins@mmlx.us>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = "0.6"
cortex-m-rt = "0.6"
embedded-hal = "0.2"
micromath = "1.0"
panic-itm = "0.4.0"
static_assertions = "1.1"
stm32f4xx-hal = { version = "0.8", features = [ "stm32f407", "usb_fs", "rt" ]}
usb-device = "0.2"
usbd-serial = "0.1"

[profile.release]
opt-level = "s"
debug = true
